# MCP-Gateway

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  config.yaml  docker-compose.lite.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release-image.yml
autonomy/: README.md  agent_policy.md  scratchpad.json  task_updater.py  test_watcher.py  verifier.py  watchdog.py  watcher.py
deploy/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  pdb.yaml  prometheus-rules.yaml  pvc.yaml  redis.yaml  service.yaml  servicemonitor.yaml  worker-deployment.yaml
device_mcp_gateway/: __init__.py  audit.py  audit_verify.py  bootstrap.py  cfg.py  cli.py  fleet_service.py  lifecycle.py  logging_setup.py  main.py  metrics.py  oidc.py  ratelimit.py  rbac.py  schemas.py
device_mcp_gateway/api/: __init__.py  admin.py  deadletter.py  devices.py  dispatch.py  fleet.py  probes.py  sse.py
device_mcp_gateway/auth/: __init__.py  api_key.py  base.py  oauth2.py
device_mcp_gateway/cfg/: __init__.py  settings.py
device_mcp_gateway/core/: __init__.py  adapter.py  backoff.py  errors.py  manifest_diff.py  spec_limits.py  translator.py
device_mcp_gateway/logging/: __init__.py  setup.py
device_mcp_gateway/observability/: __init__.py  tracing.py
device_mcp_gateway/registry/: __init__.py  models.py  pod_supervisor.py  server.py  spec_service.py
device_mcp_gateway/security/: __init__.py  mtls.py  url_policy.py
device_mcp_gateway/shared/: __init__.py  crypto.py  redis_client.py  registry_backend.py  rotate.py  session_router.py
device_mcp_gateway/storage/: __init__.py  base.py  sqlite_store.py
device_mcp_gateway/worker/: __init__.py  dispatch.py  health.py  rebalance.py  reconcile.py  runner.py  spec_pool.py
docs/: api-change-governance.md  audit-logging.md  compliance.md  error-catalog.md  failure-modes.md  kubernetes-architecture.md  lite-deploy.md  load-testing.md  multitenancy.md  observability.md  rbac-roles.md  roadmap-f10-f14.md  runbook.md  secret-rotation.md  security-mtls.md  threat-model-identity.md  threat-model.md  tooling.md  upgrade.md
docs/adr/: 0000-template.md  0001-dual-mode-embedded-distributed.md  0002-redis-control-plane.md  0003-single-owner-per-device.md  0004-single-tenant-per-stack.md  0005-at-least-once-with-idempotency-guard.md  0006-fail-closed-distributed-defaults.md  0007-federated-identity-oidc-and-gateway-rbac.md  0008-fleet-sessions.md  README.md
examples/specs/: README.md  unifi-network-integration.json
tests/: __init__.py  conftest.py  test_adapter.py  test_admission_control.py  test_api_surface.py  test_api_versioning.py  test_async_registration.py  test_audit.py  test_audit_chain.py  test_auth_adapters.py  test_backoff.py  test_bootstrap.py  test_bulk_devices.py  test_cfg.py  test_change_governance.py  test_ci_workflow.py  test_config_validation.py  test_credentials.py  test_deadletter.py  test_diagnostics.py  test_distributed_correctness.py  test_errors.py  test_executor_shutdown.py  test_fleet_distributed.py  test_fleet_integration.py  test_fleet_service.py  test_identity_propagation.py  test_integration.py  test_integration_redis.py  test_k8s_manifests.py  test_loadgen.py  test_main.py  test_metrics.py  test_mode_resolution.py  test_mtls.py  test_observability_metrics.py  test_oidc.py  test_pod.py  test_pod_http_client.py  test_pubsub_pool.py  (+27 more)
tools/: __init__.py
tools/loadtest/: README.md  __init__.py  loadgen.py
