[build-system]
requires = ["setuptools>=68.0", "wheel>=0.38.0"]
build-backend = "setuptools.build_meta"

[project]
name = "device-mcp-gateway"
version = "0.1.0"
description = "Universal API-to-MCP Gateway - Translates OpenAPI specs to MCP servers"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Open MCP Team"}
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "openapi-spec-validator>=0.5.9", 
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.2",
    "pydantic-settings>=2.1.0",
    "httpx>=0.25.2",
    "requests>=2.31.0",
    "websockets>=12.0",
    "wsproto>=1.2.0",
    "sse-starlette>=1.8.2",
    "Authlib>=1.3.0",
    "PyJWT>=2.8.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
    "structlog>=23.2.0",
    "anyio>=4.2.0",
    "aiosqlite>=0.19.0",
    "cryptography>=41.0.7"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1", 
    "pytest-cov>=4.1.0",
    "black>=23.12.1",
    "flake8>=6.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.5.0"
]

[project.scripts]
device-mcp = "device_mcp_gateway.cli:main"

[tool.setuptools.packages.find]
include = ["device_mcp_gateway*"]

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
filterwarnings = [
    "ignore::DeprecationWarning:websockets",
    "ignore:websockets.server.WebSocketServerProtocol:DeprecationWarning",
]
