[build-system]
requires = ["setuptools>=68.0", "wheel>=0.38.0"]
build-backend = "setuptools.build_meta"

[project]
name = "device-mcp-gateway"
version = "0.1.0"
description = "Universal API-to-MCP Gateway - Translates OpenAPI specs to MCP servers"
readme = "README.md"
license = {text = "PolyForm-Noncommercial-1.0.0"}
authors = [
    {name = "Ben Wold", email = "benwold@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "openapi-spec-validator>=0.5.9",
    # Upper-bound the ASGI/routing stack. `metrics.route_template` reads Starlette
    # routing internals (scope["route"]/scope["endpoint"]), and a Starlette *minor*
    # (1.2→1.3) silently changed scope["endpoint"] identity — mislabeling every HTTP
    # metric as route="__unmatched__", surfacing only once CI freshly installed the new
    # version. Pin the minor so a routing-internals change can't land unattended in CI
    # *or* a Docker rebuild; bump deliberately and re-run the route_template guard
    # (tests/test_metrics.py::test_parametrised_route_uses_template_not_concrete_path).
    "fastapi>=0.104.1,<0.138",
    "starlette>=1.2,<1.4",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.2",
    "httpx>=0.25.2",
    "sse-starlette>=1.8.2",
    "PyJWT>=2.8.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
    "anyio>=4.2.0",
    "aiosqlite>=0.19.0",
    "cryptography>=41.0.7",
    "redis[asyncio]>=5.0",
    "pybreaker>=1.2",
    "prometheus-client>=0.20",
    "jsonschema>=4.20"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1", 
    "pytest-cov>=4.1.0",
    "black>=23.12.1",
    "flake8>=6.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.5.0",
    "fakeredis>=2.26"
]
# Optional distributed tracing (F-14). Install with: pip install '.[otel]'
otel = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-http>=1.20",
]

[project.scripts]
device-mcp = "device_mcp_gateway.cli:main"
device-mcp-worker = "device_mcp_gateway.cli:worker_main"
device-mcp-rotate-secrets = "device_mcp_gateway.cli:rotate_secrets_main"

[tool.setuptools.packages.find]
include = ["device_mcp_gateway*"]

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = [
    "integration: tests that require a real Redis (skipped if MCP_REDIS_URL is unreachable)",
]
filterwarnings = [
    "ignore::DeprecationWarning:websockets",
    "ignore:websockets.server.WebSocketServerProtocol:DeprecationWarning",
]
